--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.0",
+    "axios": "^1.8.4",
+    "esbuild": "^0.25.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router": "^7.4.1",
+    "react-router-dom": "^6.10.0",
+    "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.4"
   }
 }
